Fix configuration. Add lint to tools & configuration has enabled flag for all tools
Minor nits

--- a/build.gradle
+++ b/build.gradle
@@ -73,3 +73,14 @@ artifacts {
 }
 
 apply from: file('gradle/gradle-mvn-push.gradle')
+
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        main(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+        }
+    }
+}
