Add lint information to documentation

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ pluginBundle {
         codeQualityTools {
             id = 'com.vanniktech.code.quality.tools'
             displayName = POM_NAME
-            tags = ['gradle', 'android', 'java', 'findbugs', 'pmd', 'checkstyle', 'errorprone', 'multiprojects', 'app module', 'library module']
+            tags = ['gradle', 'android', 'java', 'findbugs', 'pmd', 'checkstyle', 'errorprone', 'multiprojects', 'app module', 'library module', 'lint']
             description = POM_DESCRIPTION
         }
     }
