--- a/build.gradle
+++ b/build.gradle
@@ -76,3 +76,14 @@ artifacts {
 }
 
 apply from: file('gradle/gradle-mvn-push.gradle')
+
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        main(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+        }
+    }
+}
