--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.6.0-SNAPSHOT
+VERSION_NAME=0.6.0
 
 POM_ARTIFACT_ID=gradle-code-quality-tools-plugin
 POM_NAME=Gradle Code Quality Tools Plugin
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=Gradle plugin that Gradle plugin that generates Findbugs-, Checkstyle- and PMD Tasks for every subproject.
+POM_DESCRIPTION=Gradle plugin that generates ErrorProne, Findbugs, Checkstyle, PMD, CPD, Lint, Detekt & Ktlint Tasks for every subproject.
 POM_INCEPTION_YEAR=2016
 
 POM_URL=http://github.com/vanniktech/gradle-code-quality-tools-plugin/
