--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
 
     dependencies {
         classpath 'com.gradle.publish:plugin-publish-plugin:0.9.9'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
-        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.9.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.10.0'
     }
 }
 
@@ -19,12 +19,13 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 repositories {
     jcenter()
+    google()
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'com.android.tools.build:gradle:2.3.3'
+    compile 'com.android.tools.build:gradle:3.0.1'
 
     testCompile 'junit:junit:4.12'
 }
@@ -49,7 +50,7 @@ pluginBundle {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.1'
+    gradleVersion = '4.3.1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
