--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,15 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 repositories {
     jcenter()
     google()
+    maven { url "https://plugins.gradle.org/m2/" }
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'com.android.tools.build:gradle:3.0.1'
+    compile 'de.aaschmid:gradle-cpd-plugin:1.0'
+    compile 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.10'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
