--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-  ext.kotlinVersion = '1.2.41'
+  ext.kotlinVersion = '1.2.50'
 
   repositories {
     mavenCentral()
@@ -8,8 +8,10 @@ buildscript {
   }
 
   dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath 'com.gradle.publish:plugin-publish-plugin:0.9.10'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.19.0'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.10.0'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.2.0'
   }
@@ -18,10 +20,42 @@ buildscript {
 apply plugin: 'groovy'
 apply plugin: 'java-library'
 apply plugin: 'java-gradle-plugin'
+apply plugin: 'kotlin'
 apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.gradle.plugin-publish'
+apply plugin: 'com.vanniktech.code.quality.tools'
 apply plugin: 'com.vanniktech.android.junit.jacoco'
+apply plugin: 'com.gradle.plugin-publish'
 apply plugin: "com.vanniktech.maven.publish"
+
+// Workaround for having both Groovy + Kotlin.
+compileGroovy {
+  dependsOn tasks.getByPath('compileKotlin')
+  classpath += files(compileKotlin.destinationDir)
+}
+
+codeQualityTools {
+  ktlint {
+    toolVersion = '0.23.1'
+  }
+  detekt {
+    toolVersion = '1.0.0.RC7'
+  }
+  findbugs {
+    enabled = false
+  }
+  pmd {
+    enabled = false
+  }
+  checkstyle {
+    enabled = false
+  }
+  cpd {
+    enabled = false
+  }
+  errorProne {
+    enabled = false
+  }
+}
 
 gradlePlugin {
   plugins {
@@ -38,6 +72,16 @@ repositories {
   gradlePluginPortal()
 }
 
+configurations {
+  fixtureClasspath
+}
+
+// Append any extra dependencies to the test fixtures via a custom configuration classpath. This
+// allows us to apply additional plugins in a fixture while still leveraging dependency resolution
+// and de-duplication semantics.
+def metadata = tasks.getByName('pluginUnderTestMetadata')
+metadata.setPluginClasspath(metadata.getPluginClasspath() + configurations.fixtureClasspath)
+
 dependencies {
   api gradleApi()
   api localGroovy()
@@ -48,7 +92,10 @@ dependencies {
 
   testImplementation 'com.android.tools.build:gradle:3.1.2'
   testImplementation 'junit:junit:4.12'
+  testImplementation 'org.assertj:assertj-core:3.10.0'
   testImplementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+
+  fixtureClasspath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_7
@@ -67,7 +114,7 @@ pluginBundle {
   }
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
   gradleVersion = '4.8'
   distributionType = Wrapper.DistributionType.ALL
 }
