--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-  ext.kotlinVersion = '1.2.50'
+  ext.kotlinVersion = '1.2.60'
+  ext.androidGradlePluginVersion = '3.1.2'
 
   repositories {
     mavenCentral()
@@ -9,11 +10,11 @@ buildscript {
 
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    classpath 'com.gradle.publish:plugin-publish-plugin:0.9.10'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.19.0'
+    classpath 'com.gradle.publish:plugin-publish-plugin:0.10.0'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.12.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
-    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.2.0'
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.12.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.4.0'
   }
 }
 
@@ -35,10 +36,10 @@ compileGroovy {
 
 codeQualityTools {
   ktlint {
-    toolVersion = '0.23.1'
+    toolVersion = '0.27.0'
   }
   detekt {
-    toolVersion = '1.0.0.RC7'
+    toolVersion = '1.0.0.RC8'
   }
   findbugs {
     enabled = false
@@ -88,14 +89,15 @@ dependencies {
   api 'de.aaschmid:gradle-cpd-plugin:1.1'
   api 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.14'
 
-  compileOnly 'com.android.tools.build:gradle:3.1.2'
+  compileOnly "com.android.tools.build:gradle:$androidGradlePluginVersion"
 
-  testImplementation 'com.android.tools.build:gradle:3.1.2'
+  testImplementation "com.android.tools.build:gradle:$androidGradlePluginVersion"
   testImplementation 'junit:junit:4.12'
   testImplementation 'org.assertj:assertj-core:3.10.0'
   testImplementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
   fixtureClasspath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+  fixtureClasspath "com.android.tools.build:gradle:$androidGradlePluginVersion"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_7
