--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-  ext.kotlinVersion = '1.2.70'
-  ext.androidGradlePluginVersion = '3.1.2'
+  ext.kotlinVersion = '1.3.0'
+  ext.androidGradlePluginVersion = '3.2.1'
 
   repositories {
     mavenCentral()
@@ -13,7 +13,7 @@ buildscript {
     classpath 'com.gradle.publish:plugin-publish-plugin:0.10.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.12.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.12.0'
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.13.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.6.0'
   }
 }
@@ -36,7 +36,7 @@ compileGroovy {
 
 codeQualityTools {
   ktlint {
-    toolVersion = '0.28.0'
+    toolVersion = '0.29.0'
   }
   detekt {
     toolVersion = '1.0.0.RC8'
@@ -80,8 +80,7 @@ configurations {
 // Append any extra dependencies to the test fixtures via a custom configuration classpath. This
 // allows us to apply additional plugins in a fixture while still leveraging dependency resolution
 // and de-duplication semantics.
-def metadata = tasks.getByName('pluginUnderTestMetadata')
-metadata.setPluginClasspath(metadata.getPluginClasspath() + configurations.fixtureClasspath)
+tasks.getByName('pluginUnderTestMetadata').getPluginClasspath().from(configurations.fixtureClasspath)
 
 dependencies {
   api gradleApi()
@@ -116,6 +115,6 @@ pluginBundle {
 }
 
 wrapper {
-  gradleVersion = '4.9'
+  gradleVersion = '4.10.2'
   distributionType = Wrapper.DistributionType.ALL
 }
