--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ POM_ARTIFACT_ID=gradle-code-quality-tools-plugin
 POM_NAME=Gradle Code Quality Tools Plugin
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=Gradle plugin that generates ErrorProne, Findbugs, Checkstyle, PMD, CPD, Lint, Detekt & Ktlint Tasks for every subproject.
+POM_DESCRIPTION=Gradle plugin that generates ErrorProne, Checkstyle, PMD, CPD, Lint, Detekt & Ktlint Tasks for every subproject.
 POM_INCEPTION_YEAR=2016
 
 POM_URL=http://github.com/vanniktech/gradle-code-quality-tools-plugin/
