--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ pluginBundle {
   plugins {
     codeQualityToolsPlugin {
       displayName = POM_NAME
-      tags = ['gradle', 'android', 'java', 'findbugs', 'pmd', 'cpd', 'detekt', 'kotlin', 'ktlint', 'checkstyle', 'errorprone', 'multiprojects', 'app module', 'library module', 'lint']
+      tags = ['gradle', 'android', 'java', 'pmd', 'cpd', 'detekt', 'kotlin', 'ktlint', 'checkstyle', 'errorprone', 'multiprojects', 'app module', 'library module', 'lint']
       description = POM_DESCRIPTION
     }
   }
