--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
+import org.gradle.api.internal.classpath.ModuleRegistry
+import org.gradle.api.internal.project.ProjectInternal
+
 buildscript {
-  ext.kotlinVersion = '1.3.41'
-  ext.androidGradlePluginVersion = '3.6.0'
+  ext.kotlinVersion = '1.6.10'
+  ext.androidGradlePluginVersion = '7.1.2'
 
   repositories {
     mavenCentral()
@@ -10,22 +13,18 @@ buildscript {
 
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    classpath 'com.gradle.publish:plugin-publish-plugin:0.11.0'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.22.0'
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.19.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0'
-    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.20.0'
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.16.0'
   }
 }
 
 apply plugin: 'java-library'
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'kotlin'
-apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.vanniktech.code.quality.tools'
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 apply plugin: "com.vanniktech.maven.publish"
-apply plugin: 'com.gradle.plugin-publish'
 
 codeQualityTools {
   ktlint {
@@ -45,6 +44,9 @@ codeQualityTools {
   }
   errorProne {
     enabled = false
+  }
+  kotlin {
+    allWarningsAsErrors = false
   }
 }
 
@@ -85,24 +87,25 @@ dependencies {
 
   fixtureClasspath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   fixtureClasspath "com.android.tools.build:gradle:$androidGradlePluginVersion"
+
+  // https://github.com/gradle/gradle/issues/16774#issuecomment-893493869
+  def toolingApiBuildersJar = (project as ProjectInternal).services.get(ModuleRegistry.class)
+    .getModule("gradle-tooling-api-builders")
+    .classpath
+    .asFiles
+    .first()
+  testRuntimeOnly(files(toolingApiBuildersJar))
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_8
 
-pluginBundle {
-  website = POM_URL
-  vcsUrl = POM_SCM_URL
-
-  plugins {
-    codeQualityToolsPlugin {
-      displayName = POM_NAME
-      tags = ['gradle', 'android', 'java', 'pmd', 'cpd', 'detekt', 'kotlin', 'ktlint', 'checkstyle', 'multiprojects', 'app module', 'library module', 'lint']
-      description = POM_DESCRIPTION
-    }
+tasks.withType(Test) {
+  testLogging {
+    testLogging.exceptionFormat = 'full'
   }
 }
 
 wrapper {
-  gradleVersion = '6.3'
+  gradleVersion = '7.4'
   distributionType = Wrapper.DistributionType.ALL
 }
