--- a/build.gradle
+++ b/build.gradle
@@ -80,8 +80,7 @@ dependencies {
   compileOnly "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
   testImplementation "com.android.tools.build:gradle:$androidGradlePluginVersion"
-  testImplementation 'junit:junit:4.13-beta-3'
-  testImplementation 'org.assertj:assertj-core:2.9.0'
+  testImplementation 'junit:junit:4.13'
   testImplementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
   fixtureClasspath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
