--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,6 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=vanniktech
 POM_DEVELOPER_NAME=Niklas Baudy
 
-SONATYPE_HOST=DEFAULT
+SONATYPE_HOST=CENTRAL_PORTAL
 SONATYPE_AUTOMATIC_RELEASE=true
 RELEASE_SIGNING_ENABLED=true
