--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.vanniktech
-VERSION_NAME=0.25.0
+VERSION_NAME=0.26.0-SNAPSHOT
 
 POM_ARTIFACT_ID=gradle-code-quality-tools-plugin
 POM_NAME=Gradle Code Quality Tools Plugin
